--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "devDependencies": {
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.5",
-        "vite": "^4.0.0"
+        "tailwindcss": "^3.4.1",
+        "vite": "^4.5.2"
+    },
+    "dependencies": {
+        "three": "^0.162.0"
     }
 }
