--- a/composer.json
+++ b/composer.json
@@ -6,15 +6,16 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "ext-dom": "*",
+        "ext-libxml": "*",
         "erusev/parsedown": "^1.7",
         "erusev/parsedown-extra": "^0.8.1",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "spatie/yaml-front-matter": "^2.0",
-      "ext-libxml": "*",
-        "ext-dom": "*"
+        "spatie/laravel-feed": "^4.4",
+        "spatie/yaml-front-matter": "^2.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
