--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@babel/preset-react": "^7.23.3",
         "axios": "^1.1.2",
+        "esbuild-loader": "^4.1.0",
         "laravel-vite-plugin": "^0.7.5",
         "tailwindcss": "^3.4.1",
         "vite": "^4.5.2"
     },
     "dependencies": {
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
         "three": "^0.162.0"
     }
 }
