--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to S3
+name: Build and Deploy to S3
 
 on:
   push:
@@ -31,5 +31,6 @@ jobs:
           prev_commit_hash="$(echo $prev_commit | awk '{print $1}')"
           
           aws s3 sync ./output s3://chrisdempewolf.com --color on --exclude "*.woff2" --exclude "*.otf" --delete
+          aws cloudfront create-invalidation --distribution-id E22OYIS6W2FQMI --paths /*
         shell: bash
 
