--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,26 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Set up PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.3.8'
+          extensions: mbstring, intl, bcmath
+          ini-values: |
+            post_max_size=256M
+            upload_max_filesize=256M
+
+      - name: Install Composer dependencies
+        run: composer install --no-interaction --prefer-dist
+
+      - name: Run Laravel migrations and seeders
+        run: |
+          php artisan migrate:fresh
+          php artisan db:seed
+
+      - name: Start Laravel server
+        run: php artisan serve --host=0.0.0.0 --port=8000 &
+
       - name: Install AWS CLI
         run: |
           sudo apt-get update
