--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,9 +46,15 @@ jobs:
       - name: Start Laravel server
         run: php artisan serve --host=0.0.0.0 --port=8000 &
 
+      - name: Wait for Laravel server to start
+        run: sleep 15
+
+      - name: Check server status
+        run: curl -I http://127.0.0.1:8000
+
       - name: Download site using wget
         run: |
-          wget --directory-prefix=output/ --html-extension --convert-links --recursive --level=10 --page-requisites --timestamping --adjust-extension --no-host-directories http://127.0.0.1:8000 http://127.0.0.1:8000/404
+          wget -d --directory-prefix=output/ --html-extension --convert-links --recursive --level=10 --page-requisites --timestamping --adjust-extension --no-host-directories http://127.0.0.1:8000 http://127.0.0.1:8000/404
 
       - name: Post-process downloaded files
         run: |
