--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,8 +6,48 @@ on:
       - main
 
 jobs:
+  build-stats-page:
+  runs-on: ubuntu-latest
+
+  steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Install AWS CLI
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y awscli
+
+      - name: Install GoAccess
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y goaccess
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+
+      - name: Sync CloudFront logs and generate stats
+        run: |
+          aws s3 sync s3://logs-cloudfront-chrisdempewolf.com cloudfront-logs/
+          gunzip -c cloudfront-logs/* | goaccess -o ./public/stats.html --log-format CLOUDFRONT --time-format CLOUDFRONT --date-format CLOUDFRONT
+
+      - name: Commit and push changes
+        run: |
+          git config --global user.email "github@green-world.uk"
+          git config --global user.name "Github Actions"
+          git add cloudfront-logs/ public/stats.html
+          git commit -m "Update CloudFront logs and stats"
+          git push --set-upstream github main
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
   deploy:
     runs-on: ubuntu-latest
+    needs: build-stats-page
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -89,11 +129,6 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
-
-      - name: Sync CloudFront logs and generate stats
-        run: |
-          aws s3 sync s3://logs-cloudfront-chrisdempewolf.com cloudfront-logs/
-          gunzip -c cloudfront-logs/* | goaccess -o ./output/stats.html --log-format CLOUDFRONT --time-format CLOUDFRONT --date-format CLOUDFRONT
 
       - name: Deploy to S3
         run: |
