--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,8 +30,8 @@ jobs:
   
         - name: Sync CloudFront logs and generate stats
           run: |
-            aws s3 sync s3://logs-cloudfront-chrisdempewolf.com cloudfront-logs/
-            gunzip -c cloudfront-logs/* | goaccess -o ./public/stats.html --log-format CLOUDFRONT --time-format CLOUDFRONT --date-format CLOUDFRONT
+            aws s3 sync s3://logs-cloudfront-chrisdempewolf.com ./cloudfront-logs/
+            gunzip -c ./cloudfront-logs/* | goaccess -o ./public/stats.html --log-format CLOUDFRONT --time-format CLOUDFRONT --date-format CLOUDFRONT
   
         - name: Commit and push changes
           run: |
