--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,15 +11,20 @@ jobs:
         - name: Checkout repository
           uses: actions/checkout@v3
   
-        - name: Install AWS CLI
+        - name: Install Dependencies
           run: |
             sudo apt-get update
-            sudo apt-get install -y awscli
-  
-        - name: Install GoAccess
+            sudo apt-get install -y awscli build-essential libgeoip-dev libncursesw5-dev \
+              libtokyocabinet-dev libssl-dev zlib1g-dev wget
+
+        - name: Install GoAccess 1.9.1
           run: |
-            sudo apt-get update
-            sudo apt-get install -y goaccess
+            wget https://tar.goaccess.io/goaccess-1.9.1.tar.gz
+            tar -xzvf goaccess-1.9.1.tar.gz
+            cd goaccess-1.9.1/
+            ./configure --enable-utf8 --enable-geoip=legacy
+            make
+            sudo make install
   
         - name: Configure AWS credentials
           uses: aws-actions/configure-aws-credentials@v2
