--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,9 +46,9 @@ jobs:
             echo "Running goaccess on each log file:"
             for file in cloudfront-logs/*.gz; do
               echo "Processing $file"
-              gunzip -c "$file" | goaccess --log-format CLOUDFRONT --time-format '%H:%M:%S' --date-format '%d/%b/%Y' - >> goaccess.log
+              gunzip -c "$file" | goaccess --log-format CLOUDFRONT --time-format CLOUDFRONT --date-format CLOUDFRONT- >> goaccess.log
             done
-            goaccess goaccess.log -o ./public/stats.html --log-format CLOUDFRONT --time-format '%H:%M:%S' --date-format '%d/%b/%Y'
+            goaccess goaccess.log -o ./public/stats.html --log-format CLOUDFRONT --time-format CLOUDFRONT --date-format CLOUDFRONT
   
         # - name: Generate stats using GoAccess
         #   run: |
