--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,8 +54,8 @@ jobs:
               if [ ${#files[@]} -eq $batch_size ]; then
                 echo "Processing batch of ${#files[@]} files"
                 for f in "${files[@]}"; do
-                  zcat "$f"
-                done | goaccess --log-format CLOUDFRONT --time-format CLOUDFRONT --date-format CLOUDFRONT - >> goaccess.log
+                  zcat "$f" >> goaccess.log
+                done
                 files=()
               fi
             done
@@ -64,7 +64,7 @@ jobs:
               echo "Processing final batch of ${#files[@]} files"
               for f in "${files[@]}"; do
                 zcat "$f"
-              done | goaccess --log-format CLOUDFRONT --time-format CLOUDFRONT --date-format CLOUDFRONT - >> goaccess.log
+              done
             fi
             echo "Process aggragated log file"
             goaccess goaccess.log -o ./public/stats.html --log-format CLOUDFRONT --time-format CLOUDFRONT --date-format CLOUDFRONT
