--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -116,6 +116,8 @@ jobs:
           fi
           pwd
           ls -la
+          ls -la public
+          ls -la /home/runner/work/_temp
           for f in $(public/assets/js/*); do curl -I http://127.0.0.1:8000/assets/js/$f; done
       - name: Download site using wget
         run: |
