--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,10 +56,10 @@ jobs:
       - name: Fix links on 404 page
         run: |
           sed -i'' -e 's|href=\"assets/css/output.css\"|href=\"https://chrisdempewolf.com/assets/css/output.css\"|g' ./output/404.html
-          sed -i'' -e 's|href=\"assets/css/github-dark.min.css\"|href=\"https://chrisdempewolf.com/assets/css/github-dark.min.css\"|g' ./output/404.html
-          sed -i'' -e 's|href=\"about.html\"|href=\"https://chrisdempewolf.com/about.html\"|g' ./output/404.html
-          sed -i'' -e 's|href=\"resume.pdf\"|href=\"https://chrisdempewolf.com/resume.pdf\"|g' ./output/404.html
-          sed -i'' -e 's|href=\"tags/index.html\"|href=\"https://chrisdempewolf.com/tags/index.html\"|g' ./output/404.html\n"
+#          sed -i'' -e 's|href=\"assets/css/github-dark.min.css\"|href=\"https://chrisdempewolf.com/assets/css/github-dark.min.css\"|g' ./output/404.html
+#          sed -i'' -e 's|href=\"about.html\"|href=\"https://chrisdempewolf.com/about.html\"|g' ./output/404.html
+#          sed -i'' -e 's|href=\"resume.pdf\"|href=\"https://chrisdempewolf.com/resume.pdf\"|g' ./output/404.html
+#          sed -i'' -e 's|href=\"tags/index.html\"|href=\"https://chrisdempewolf.com/tags/index.html\"|g' ./output/404.html\n"
           cat ./output/404.html
       - name: Remove unnecessary files
         run: rm -rf ./output/cdn-cgi/
